# ml-image-generator

./: .gitignore  README.md  nose2.cfg  pyproject.toml
src/: __main__.py  generator.ipynb
src/modules/: Discriminator.py  DiscriminatorTrainingDatum.py  Generator.py  GeneratorTrainingDatum.py  RegexLabelExtractor.py  TrainingDataFileReader.py  TrainingDataScaler.py  TrainingDatum.py
src/modules/abstract/: LabelExtractor.py
src/modules/data/: DiscriminatorTrainingDatum.py  GanTrainingDatum.py  GeneratorTrainingDatum.py
src/modules/models/: Discriminator.py  Gan.py  Generator.py
src/modules/utils/: DiscriminatorTrainingDataFileReader.py  RegexLabelExtractor.py  TrainingDataFileReader.py
src/modules/utils/abstract/: LabelExtractor.py
tests/: Test_RegexLabelExtractor.py
